[tool.poetry]
name = "linear_regression"
version = "1.0.0"
description = ""
authors = ["Will Humphlett <will@humphlett.net>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^0.20.0"
numpy = "^1.23.2"
pandas = "^1.4.4"
scikit-learn = "^1.1.2"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[tool.poetry.scripts]
main = "linear_regression.linear_regression:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
